devoir_programmation_java/media/solutions/erreur.txt
main.java:9: error: ';' expected
    System.out.println(s)
                         ^
1 error
